created a more proper file structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(N2End)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(N2End main.cpp initWindows.cpp initWindows.h CCWindow.cpp CCWindow.h fileParse.h fileParse.cpp ChatRoom.cpp ChatRoom.h connect.cpp connect.h crypt.h crypt.cpp)
+add_executable(N2End src/main.cpp src/CCWindow.cpp src/CCWindow.h src/fileParse.h src/fileParse.cpp src/ChatRoom.cpp src/ChatRoom.h src/connect.cpp src/connect.h)
 set(CMAKE_CXX_FLAGS "-lncurses -lpthread")
 target_link_libraries(${PROJECT_NAME} ncurses pthread)
